# Scilab-Jupyter-Kernel

scilab/: CHANGES.md  Makefile.am  Makefile.in  README.md  configure.ac
scilab/contrib/: Makefile.in
scilab/desktop/: Makefile.in
scilab/modules/: Makefile.am  Makefile.in
scilab/modules/action_binding/: Makefile.in
scilab/modules/api_scilab/: Makefile.in
scilab/modules/arnoldi/: Makefile.in
scilab/modules/ast/: Makefile.in
scilab/modules/atoms/: Makefile.in
scilab/modules/boolean/: Makefile.in
scilab/modules/cacsd/: Makefile.in
scilab/modules/call_scilab/: Makefile.in
scilab/modules/commons/: Makefile.in
scilab/modules/compatibility_functions/: Makefile.in
scilab/modules/completion/: Makefile.in
scilab/modules/console/: Makefile.in
scilab/modules/core/: Makefile.in
scilab/modules/coverage/: Makefile.in
scilab/modules/data_structures/: Makefile.in
scilab/modules/demo_tools/: Makefile.in
scilab/modules/development_tools/: Makefile.in
scilab/modules/differential_equations/: Makefile.in
scilab/modules/dynamic_link/: Makefile.in
scilab/modules/elementary_functions/: Makefile.in
scilab/modules/external_objects/: Makefile.in
scilab/modules/external_objects_java/: Makefile.in
scilab/modules/fftw/: Makefile.in
scilab/modules/fileio/: Makefile.in
scilab/modules/functions/: Makefile.in
scilab/modules/functions_manager/: Makefile.in
scilab/modules/genetic_algorithms/: Makefile.in
scilab/modules/graph/: Makefile.in
scilab/modules/graphic_export/: Makefile.in
scilab/modules/graphic_objects/: Makefile.in
scilab/modules/graphics/: Makefile.in
scilab/modules/gui/: Makefile.in
scilab/modules/hdf5/: Makefile.in
scilab/modules/helptools/: Makefile.in
scilab/modules/history_browser/: Makefile.in
scilab/modules/history_manager/: Makefile.in
scilab/modules/integer/: Makefile.in
scilab/modules/interpolation/: Makefile.in
scilab/modules/io/: Makefile.in
scilab/modules/javasci/: Makefile.in
scilab/modules/jupyter/: Makefile.am  Makefile.in
scilab/modules/jupyter/includes/: InitializeJupyter.h  JupyterMessagePrint.h  JupyterMessageRead.h  dynlib_jupyter.h
scilab/modules/jupyter/src/cpp/: InitializeJupyter.cpp  InitializeJupyter.hxx  JupyterKernel.cpp  JupyterKernel.hxx  JupyterKernelConnection.cpp  JupyterKernelConnection.hxx  JupyterMessage.cpp  JupyterMessage.hxx  JupyterMessageHash.cpp  JupyterMessageHash.hxx  JupyterMessagePrint.cpp  JupyterMessagePrint.hxx  JupyterMessageRead.cpp  JupyterMessageRead.hxx  uuid.cpp  uuid.hxx
scilab/modules/jvm/: Makefile.in
scilab/modules/linear_algebra/: Makefile.in
scilab/modules/localization/: Makefile.in
scilab/modules/m2sci/: Makefile.in
scilab/modules/matio/: Makefile.in
scilab/modules/mexlib/: Makefile.in
scilab/modules/modules_manager/: Makefile.in
scilab/modules/mpi/: Makefile.in
scilab/modules/optimization/: Makefile.in
scilab/modules/output_stream/: Makefile.in
scilab/modules/overloading/: Makefile.in
(+31 files in other folders)
